fix resume job form too wide

--- a/src/components/renewal-job-form.module.css
+++ b/src/components/renewal-job-form.module.css
@@ -1,5 +1,9 @@
 .renewalForm {
     min-height: 120vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .field {
@@ -7,13 +11,14 @@
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .input {
     /* margin-top: 1vmin; */
 
     min-width: 50vw;
-    max-width: 90%;
+    max-width: 60%;
 
     /* border-style: solid;
     border-radius: 1vmin; */
